<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Num1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/num1"
        app:layout_constraintBottom_toBottomOf="@id/num1"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Num2"
        app:layout_constraintTop_toTopOf="@id/num2"
        app:layout_constraintBottom_toBottomOf="@id/num2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="71dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/num1"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <Button
        android:id="@+id/add"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="42dp"
        android:text="+"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/subtract"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <Button
        android:id="@+id/subtract"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:text="-"
        app:layout_constraintBaseline_toBaselineOf="@+id/add"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintStart_toEndOf="@+id/add" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="13dp"
        android:text="x"
        app:layout_constraintBottom_toBottomOf="@+id/subtract"
        app:layout_constraintEnd_toStartOf="@+id/division"
        app:layout_constraintStart_toEndOf="@+id/subtract"
        app:layout_constraintTop_toTopOf="@+id/subtract" />

    <Button
        android:id="@+id/division"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginEnd="115dp"
        android:text="/"
        app:layout_constraintBaseline_toBaselineOf="@+id/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/multiply" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:text="Answer:"
        app:layout_constraintBaseline_toBaselineOf="@+id/resultView"
        app:layout_constraintStart_toStartOf="@+id/subtract" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="325dp"
        android:text="Result"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/launchB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Goto B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate"
        app:layout_constraintVertical_bias="0.12" />
</androidx.constraintlayout.widget.ConstraintLayout>